--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,34 @@
 @import "/src/assets/styles/abstracts/variables";
-.theme-toast{
+
+.theme-toast {
     @extend .primary-background;
     @extend .primary-text-1;
     @extend .primary-border;
 }
 
-.react-tel-input .form-control{
+.react-tel-input .form-control {
     @extend .primary-background;
 }
 
-.pwa-update-screen{
+.pwa-update-screen {
     padding: 3rem;
     text-align: center;
+}
+
+.App {
+    background-color: #000;
+    color: #fff;
+
+    .page-container {
+        background-color: #f3f6f7;
+        border-radius: 30px;
+        margin: 3.35rem 2.25rem 0;
+        min-height: 100vh;
+        padding: 1rem 6rem;
+
+        @include respond(phone) {
+            padding: 1rem;
+            margin: 0px;
+        }
+    }
 }
