--- a/src/assets/styles/typography/_fonts.scss
+++ b/src/assets/styles/typography/_fonts.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap");
 
 @font-face {
-    font-family: 'mindler-font';
+    font-family: 'HKGrotesk';
     src: local('HKGrotesk-Regular'),
         url('../../fonts/HKGrotesk-Regular.otf') format('woff'),
         url('../../fonts/HKGrotesk-Regular.otf') format('woff2'),
@@ -12,7 +12,7 @@
 }
 
 @font-face {
-    font-family: 'mindler-font';
+    font-family: 'HKGrotesk';
     src: local('HKGrotesk-Medium'),
         url('../../fonts/HKGrotesk-Medium.otf') format('woff'),
         url('../../fonts/HKGrotesk-Medium.otf') format('woff2'),
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-    font-family: 'mindler-font';
+    font-family: 'HKGrotesk';
     src: local('HKGrotesk-Bold'),
         url('../../fonts/HKGrotesk-Bold.otf') format('woff'),
         url('../../fonts/HKGrotesk-Bold.otf') format('woff2'),
@@ -34,7 +34,7 @@
 }
 
 @font-face {
-    font-family: 'mindler-font';
+    font-family: 'HKGrotesk';
     src: local('HKGrotesk-SemiBold'),
         url('../../fonts/HKGrotesk-SemiBold.otf') format('woff'),
         url('../../fonts/HKGrotesk-SemiBold.otf') format('woff2'),
@@ -45,7 +45,7 @@
 }
 
 @font-face {
-    font-family: 'mindler-font';
+    font-family: 'HKGrotesk';
     src: local('HKGrotesk-ExtraBold'),
         url('../../fonts/HKGrotesk-ExtraBold.otf') format('woff'),
         url('../../fonts/HKGrotesk-ExtraBold.otf') format('woff2'),
@@ -56,7 +56,7 @@
 }
 
 @font-face {
-    font-family: 'mindler-font';
+    font-family: 'HKGrotesk';
     src: local('HKGrotesk-Light'),
         url('../../fonts/HKGrotesk-Light.otf') format('woff'),
         url('../../fonts/HKGrotesk-Light.otf') format('woff2'),
@@ -68,7 +68,7 @@
 
 body {
     font-size: 14px;
-    font-family: 'mindler-font', 'Open Sans';
+    font-family: 'HKGrotesk', 'Open Sans';
 
     &.dark {
         font-weight: 350;
