--- a/src/assets/styles/components/_buttons.scss
+++ b/src/assets/styles/components/_buttons.scss
@@ -24,8 +24,8 @@
     }
 
     &--blue {
-        background-color: #1480B7;
-        box-shadow: 0px 3px 0px #0F5F87;
+        background-color: #4CAF50;
+        // box-shadow: 0px 3px 0px #0F5F87;
 
         color: #fff;
 
@@ -37,11 +37,11 @@
     &--sky {
         @extend .primary-background;
         border-radius: 10px;
-        color: #1480B7;
+        color: #5bc05e;
 
         font-size: 14px;
         border-radius: 10px;
-        border: 1px solid #1480B7;
+        border: 1px solid #5bc05e;
         font-weight: 700;
 
         &:disabled {
