--- a/src/components/assessment/test-section/TestSection.scss
+++ b/src/components/assessment/test-section/TestSection.scss
@@ -8,7 +8,7 @@
     }
 
     .question {
-        color: #0083B3;
+        color: #5bc05e;
 
         &-image {
             background-color: #fff;
@@ -35,8 +35,8 @@
     }
 
     .option {
-        background-color: #fff;
-        border: 1px solid rgba(17,13,63,.08);
+        background-color: #2C2C2C;
+        border: 1px solid rgba(17, 13, 63, .08);
 
         .tick {
             display: none;
@@ -46,7 +46,8 @@
             display: none;
 
             &:checked+label {
-                background-color: $color-primary;
+                background-color: #5bc05e;
+                ;
                 color: #fff;
 
 
@@ -107,8 +108,8 @@
     .button2 {
         width: 183px;
         height: 48px;
-        background: #1480B7;
-        box-shadow: 0px 3px 0px #0F5F87;
+        background: #4CAF50;
+        // box-shadow: 0px 3px 0px #0F5F87;
         border-radius: 8px;
 
         .res {
