--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@
 }
 
 .App {
-    background-color: #1E1E1E;
+    // background-color: #1E1E1E;
     border-radius: 30px;
     margin: 2rem ;
     min-height: 100vh;
